# TinyWebC

./: .cursor-setup.json  .cursorrules  .gitignore  CLIENT_BACKEND_STATE_MAP.md  CLIENT_MIGRATION_TASKS.md  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DATABASE_SCHEMA_ANALYSIS.md  FEATURE_GAP_ANALYSIS.md  FOUNDATIONAL_GAPS_ANALYSIS.md  HYBRID_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  INIT_DATABASE_INTEGRATION.md  MIGRATION_READINESS.md  Makefile  NEXT_STEPS.md  PLAN.md  PROTOBUF_MIGRATION.md  README.md  REPOSITORY_REVIEW.md  SETUP.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_SUMMARY.md  TEST_OVERVIEW.md  blocks_debug.txt  cmake_install.cmake  cmds.txt  cursor.md  debug_permissions.c  debug_transaction_hash_backend.txt  docker_config_generator  fix_test.txt  init_tool  initialization_tasks.txt  install_deps.sh  multi_node_pbft_test  multi_node_pbft_test.c  multi_node_pbft_test_fixed  multi_node_pbft_test_fixed.c  (+33 more)
.cursor/rules/: cursormd.mdc
.kiro/specs/pbft-multinode-consensus/: design.md  requirements.md  tasks.md
Testing/Temporary/: CTestCostData.txt
client/web-ui/: .env.example  config-overrides.js  package.json  test-encryption.js
client/web-ui/src/: App.css  App.js
client/web-ui/src/components/: AutoTestRunner.css  AutoTestRunner.js  ConversationView.css  ConversationView.js  ConversationsList.css  ConversationsList.js  CryptoDemo.css  CryptoDemo.js  KeyManagement.css  KeyManagement.js  LocationDashboard.css  LocationDashboard.js  Login.css  Login.js  MessagingTest.css  MessagingTest.js
client/web-ui/src/proto/: api.proto  content.proto  envelope.proto  message.proto
client/web-ui/src/utils/: api.js  auth.js  byteorder.js  clientRequestHelper.js  conversationId.js  encryption.js  envelope.js  envelopeHelper.js  index.js  keystore.js  message.js  messageHelper.js  protobufDecode.js  protobufHelper.js  requestAuth.js
docker_configs/: docker-compose.tailscale.yml.template  docker-compose.test.yml  docker-compose.yml
docker_configs/node_01/: network_config.json
docker_configs/node_02/: network_config.json
docker_configs/node_03/: network_config.json
docker_configs/node_04/: network_config.json
docs/: KEY_DISTRIBUTION_ARCHITECTURE.md
ideas/: in_person_invitation.md  proximity_implementation_guide.md  proximity_implementation_summary.md  proximity_system_changes.md
scripts/: Dockerfile.node  docker_config_generator.c  docker_config_generator.py  docker_test_runner.sh  init.c  init.h  init_tool.c  install_deps.sh  setup_tailscale.sh  sync_protos.sh  tailscale_health_check.sh
scripts/configs/: network_config.json  schema.json
scripts/systemd/: tailscale-healthcheck.timer  tailscale-healthcheck@.service
src/: main.c
src/features/blockchain/: CMakeLists.txt
src/features/blockchain/app/: main_pbft.c
src/features/blockchain/core/: block.c  block.h  blockchain.h  internalTransaction.c  internalTransaction.h  merkleTree.c  merkleTree.h  merkleTreeNode.h  transaction_types.c  transaction_types.h
src/features/blockchain/pbft/: node.h  pbft_node.c  pbft_node.h
src/features/blockchain/persistence/: blockchain_io.c  blockchain_io.h  persistence_manager.c  persistence_manager.h
src/proto/: client_request.proto  content.proto  envelope.proto
src/structs/: types.h
src/structs/group/: group.c  group.h
src/structs/message/: message.c  message.h
src/structs/permission/: permission.c  permission.h
src/structs/role/: role.c  role.h
src/structs/verification/: signature.c  signature.h
src/tests/: access_request_test.c  access_request_test.h  api_protobuf_test.c  api_protobuf_test.h  blockchain_test.c  blockchain_test.h  database_test.c  database_test.h  discovery_test.c  discovery_test.h  encryption_test  encryption_test.c  encryption_test.h  envelope_dispatcher_test.c  envelope_dispatcher_test.h  envelope_test.c  envelope_test.h  foundational_features_test.c  foundational_features_test.h  gossip_store_test.c  gossip_store_test.h  gossip_validation_test.c  gossip_validation_test.h  http_client_test.c  http_client_test.h  httpclient_test.c  httpclient_test.h  init_network_test.c  init_network_test.h  invitation_test.c  invitation_test.h  location_api_test.c  location_api_test.h  message_api_test.c  message_api_test.h  message_permissions_test.c  message_permissions_test.h  message_store_test.c  message_store_test.h  mongoose_test.c  (+16 more)
state/: network_config.json
state/blockchain/: blockchain.dat.backup_20250803_083100  blockchain.dat.backup_20250803_083246  blockchain.json
state/keys/: node_0_private.key  node_1_private.key  node_2_private.key
state/keys_backup/: node_0_private.key
state/node_0/blockchain/: blockchain.db-shm  blockchain.db-wal
state/node_3/blockchain/: blockchain.db-shm  blockchain.db-wal
test_state/blockchain/: test_blockchain.db
test_state/node_01/: network_config.json
